# sel4service

./: CMakeLists.txt  README.md  easy-settings.cmake  settings.cmake
ramdisk/: CMakeLists.txt
ramdisk/src/: main.c
rootserver/: CMakeLists.txt
rootserver/src/: env.h  main.c
sqlite3/: CMakeLists.txt
sqlite3/src/: .gitignore  Makefile  bench.h  benchmark.c  main.c  random.c
xv6fs/: CMakeLists.txt
xv6fs/src/: bio.c  defs.h  file.c  fs.c  fs.h  main.c  sysfile.c
